# on

./: .env.example  .env.robust.template  .gitignore  Dockerfile  Project.env.txt  Project.json  analysis.py  data_fetch.py  docker-compose.yml  gunicorn.conf.py  logging.conf  main.py  pyproject.toml  readme.md  requirements.txt  utils.py
.github/workflows/: ci-cd.yml
app/: main.py  tasks.py
app/api/: routes.py
app/core/: auth.py  celery_app.py  config.py  dependencies.py  logging.py  parsers.py  services.py
app/ml/: anomaly_detector.py
app/models/: base.py
app/schemas/: launch.py
tests/: conftest.py  test_api.py  test_ml.py  test_services.py
